# dash-cart

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
src/nginx/: Dockerfile  nginx.conf
src/services/auth/: Dockerfile  pyproject.toml
src/services/auth/configs/: app-example.yaml  database-example.yaml
src/services/auth/src/app/adapters/: session_creator.py
src/services/auth/src/app/exceptions/: auth_exceptions.py
src/services/auth/src/app/logger/: file_handler.py  logger.py
src/services/auth/src/app/routers/: auth.py
src/services/auth/src/app/schemas/: token.py
src/services/cart/: Dockerfile  pyproject.toml
src/services/catalog/: Dockerfile  pyproject.toml
src/services/clients/: Dockerfile  pyproject.toml
src/services/dashcart-site/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/services/dashcart-site/src/app/: appEntry.tsx
src/services/employee/: Dockerfile  pyproject.toml
src/services/notification/: Dockerfile  pyproject.toml
src/services/user/: Dockerfile  pyproject.toml
src/services/user/src/app/exceptions/: user_exceptions.py
src/services/user/src/app/infrastructure/bootstrap/: runner.py
src/services/user/src/app/ioc/: __init__.py  ioc.py
src/services/user/src/app/repository/: IRepository.py  user.py
src/services/user/src/app/repository/models/: User.py
src/services/user/src/app/repository/scheams/: user.py
src/services/user/src/app/routers/: exceptions.py  user.py
src/services/user/src/app/services/: user.py
(+98 files in other folders)
